Adding 2nd page

--- a/style.css
+++ b/style.css
@@ -53,9 +53,12 @@ section .btn a
 }
 .team-staff .harry-card h2
 {
-    color: #717171;
+    color: #040404;
     font-family: fantasy;
     font-size: 38px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
 }
 .team-staff .harry-card div
 {
@@ -69,3 +72,158 @@ iframe
 {
     padding: 0px !important;
 }
+
+
+
+
+
+.my-footer::before {  
+    content: "";
+    background-image: url('assets/prof.jpg');
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.5;
+}
+
+.my-footer
+{
+  position: relative;
+  background-color:#26272b;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#737373;
+}
+.my-footer .pb-60
+{
+    padding-bottom: 60px;
+}
+.my-footer p, .my-footer a
+{
+    color: #fff;
+    opacity: 0.5;
+}
+.my-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
+}
+.my-footer hr.small
+{
+  margin:20px 0
+}
+.my-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.my-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.my-footer .social-icons
+{
+  text-align:right
+}
+.my-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color: #000000;
+  opacity: 1;
+}
+.copyright-text
+{
+  margin:0
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a:hover
+{
+  background-color:#000;
+}
+
+
+/************************ 2nd page *************/
+
+
+.contact
+{
+
+}
+
+
+
+
