--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 
+
+.my-logo
+{
+  height: 65px;
+  width: 90px;
+  margin-right: 10px;
+}
 .harryPotter-color
 {
     background-image: linear-gradient(2deg, #000000, #292929,#020202,#e6e6e6);
